# RAG

./: README.md  langgraph.ipynb  multiagent.ipynb  pyproject.toml  rag_modified.ipynb  rag_testfile.ipynb  tavily.ipynb
rag_app/: api.py  data_loader.py  embeddings.py  llm.py  main.py  retrival.py  vector_store.py
rag_app/qdrant_storage/: meta.json
rag_app/qdrant_storage/collection/medical_paper/: storage.sqlite
